<resources>
    <string name="app_name">HangoutYuk!</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_chats">Chats</string>
    <string name="rating_totalreview">%d %s</string>
    <string name="title_login">Login</string>
    <string name="subtitle_login">Discover, Engage, and Create Unforgettable Moments at Vibrant Hangout Spots</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="havent_account">Don\'t Have an Account?</string>
    <string name="register_here">Register here</string>
    <string name="copyright">HangoutYuk! © 2023</string>
    <string name="title_register">Register</string>
    <string name="subtitle_regiter">Explore, Connect, and Unwind at Your Ideal Hangout Destinations</string>
    <string name="fullname">Fullname</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="register_failed">Register Failed</string>
    <string name="invalid_data">Data invalid, check again your data.</string>
    <string name="enter_data">No data, please enter data.</string>
    <string name="login_failed">Login Failed</string>
    <string name="see_all">See All</string>
    <string name="profile_image">profile image</string>
    <string name="hello">Hello</string>
    <string name="user_name">User Name</string>
    <string name="search_bar">search bar</string>
    <string name="search_here">Search Here</string>
    <string name="recommendation">Recommendation</string>
    <string name="maps_view">Maps view</string>
    <string name="title_profile">Profile</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="info">Info</string>
    <string name="places_photo">places photo</string>
    <string name="maps">Maps</string>
    <string name="categories">Categories</string>
    <string name="place_name">Place Name</string>
    <string name="address">Alamat tempat, Sosromenduran, Gedong Tengen, Kota Yogyakarta, Daerah Istimewa Yogyakarta</string>
    <string name="schedule">Schedule</string>
    <string name="about">About</string>
    <string name="about_desc">about description of the place</string>
    <string name="reviews">Reviews</string>
    <string name="contacts">Contacts</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="vote">Vote</string>
    <string name="card_review">card review item</string>
    <string name="time">Time</string>
    <string name="review_detail">Seattle-based coffeehouse chain known for its signature roasts, light bites and WiFi availability.</string>
    <string name="rating">Rating</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location_not_found">Can\'t get your location, Try again.</string>
    <string name="error_maps">Error loading maps</string>
    <string name="style_failed">Style parsing failed.</string>
    <string name="error_style">\"Can\'t find style. Error: \"</string>
    <string name="add_image">Add Image</string>
    <string name="no_picture">No Picture</string>
    <string name="loading">Please wait..</string>
    <string name="post_succed">Profile Updated</string>
    <string name="post_failed">Save failed</string>
    <string name="choose_picture">Choose picture</string>
    <string name="input_new_password">Input new password</string>
    <string name="illustration">Illustration</string>
    <string name="favorite_places">Favorite Places</string>
    <string name="card_places">Card Places</string>
    <string name="ex_total_review">(96.9k)</string>
    <string name="ex_rating">4.5</string>
    <string name="ex_distance">3.2 km away</string>
    <string name="time_icon">Time icon</string>
    <string name="ex_schedule">Senin: 09.00 – 22.00</string>
    <string name="delete_account">Delete Account</string>
    <string name="title_activity_choose_maps">ChooseMapsActivity</string>
    <string name="title_activity_maps_favorite">MapsFavoriteActivity</string>
    <string name="my_location">My Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="empty_favorite">There is no favorite places yet</string>
    <string name="error_detail">Can\'t get detail</string>
    <string name="get_recommendation_mylocation">Getting recommendation for your location..</string>
    <string name="get_recommendation_choose">Getting Your Chosen Location..</string>
    <string name="no_location_chosen">No Location Chosen</string>
    <string name="cannot_change_profile">Can\'t change profile, check your data</string>
    <string name="account_deleted">Account Deleted</string>
    <string name="no_places">There is no places yet</string>
    <string name="poll_history">Poll History</string>
    <string name="title_history">History</string>
    <string name="empty_polls">There is no polls yet</string>
    <string name="share">Share</string>
    <string name="visit">Visit</string>
    <string name="delete">Delete</string>
</resources>