<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:layout_marginBottom="16dp"
    android:contentDescription="@string/card_places"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/places_photo"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/place_name"
                android:layout_marginEnd="16dp"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:layout_constraintEnd_toStartOf="@+id/item_distance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/categories"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="@+id/item_name"
                app:layout_constraintTop_toBottomOf="@+id/item_name" />

            <TextView
                android:id="@+id/item_totalReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex_total_review"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_star"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_stared"
                app:layout_constraintBottom_toBottomOf="@+id/item_totalReview"
                app:layout_constraintEnd_toStartOf="@+id/item_totalReview"
                app:layout_constraintTop_toTopOf="@+id/item_totalReview"
                app:tint="@color/md_theme_light_secondaryContainer"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:id="@+id/item_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/ex_rating"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toStartOf="@+id/imageView_star"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ex_distance"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_totalReview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>