<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="1dp"
    android:layout_marginEnd="1dp"
    android:layout_marginBottom="8dp"
    android:contentDescription="@string/card_review"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/item_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/user_name"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintEnd_toStartOf="@+id/item_rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_username" />

        <TextView
            android:id="@+id/item_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/review_detail"
            android:textAppearance="?attr/textAppearanceBodySmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_time"
            app:layout_constraintTop_toBottomOf="@+id/item_time" />

        <TextView
            android:id="@+id/item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/rating"
            android:textAppearance="?attr/textAppearanceBodySmall"
            app:layout_constraintBottom_toBottomOf="@+id/item_time"
            app:layout_constraintEnd_toStartOf="@+id/imageView_star"
            app:layout_constraintTop_toTopOf="@+id/item_username" />

        <ImageView
            android:id="@+id/imageView_star"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@string/rating"
            android:src="@drawable/ic_stared"
            app:layout_constraintBottom_toBottomOf="@+id/item_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_rating"
            app:tint="@color/md_theme_light_secondaryContainer"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>